
Copyright (c) 1998-2009 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.37.6 - December ??, 2009

    Updated the Logtalk compiler to workaround file path problems with
    back-end Prolog compilers (e.g. SICStus Prolog) where calls to the
    open/3-4 built-in predicate are not always relative to the current
    working directory.

    Updated the ECLiPSe, SICStus Prolog, SWI-Prolog, and YAP config files
    in order to detect discontiguous predicate clause warnings and update
    the Logtalk warnings counter accordingly.

    Updated the SICStus Prolog config files in order to support settings
    files. Updated the SICStus Prolog 4.x config file in order to use the
    new "version_data" flag and recognize the new do/2 meta-predicate added
    in version 4.1.

    Updated the Logtalk Windows installer in order to detect the new SICStus
    Prolog 4.1 version. If both 4.0.x and 4.1.x versions are installed, the
    installer creates a shortcut for using version 4.1.x as the back-end
    Prolog compiler.

    Updated the Logtalk Windows installer in order to detect both XSB single-
    threaded and multi-threaded versions and to no longer create integration
    shortcuts for XSB versions older than 3.2.

    Corrected a possible data loss bug when using the Debian and MacOS X
    installers where third-party mime-type associations might be lost when
    adding the Logtalk mime-type to the Shared MIME-info Database.

    Added a Logtalk version of the "Closed Knight's Tour" SWI-Prolog CLP(FD)
    example written by Markus Triska.


2.37.5 - October 29, 2009

    Updated the Logtalk multi-threading features, replacing all calls to